chore: i18n string updates (#6862)
* New translations en_us.json (French)

* New translations en_us.json (Arabic)

* New translations en_us.json (Korean)

* New translations en_us.json (Russian)

* New translations en_us.json (Turkish)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Indonesian)

* New translations en_us.json (Thai)

* New translations en_us.json (Hindi)

* New translations en_us.json (Spanish, Latin America)

* New translations en_us.json (French)

* New translations en_us.json (Arabic)

* New translations en_us.json (Japanese)

* New translations en_us.json (Korean)

* New translations en_us.json (Russian)

* New translations en_us.json (Turkish)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Indonesian)

* New translations en_us.json (Thai)

* New translations en_us.json (Hindi)

* New translations en_us.json (Spanish, Latin America)

* New translations en_us.json (French)

* New translations en_us.json (Arabic)

* New translations en_us.json (Japanese)

* New translations en_us.json (Korean)

* New translations en_us.json (Russian)

* New translations en_us.json (Turkish)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Indonesian)

* New translations en_us.json (Thai)

* New translations en_us.json (Hindi)

* New translations en_us.json (Spanish, Latin America)

* New translations en_us.json (French)

* New translations en_us.json (Arabic)

* New translations en_us.json (Japanese)

* New translations en_us.json (Korean)

* New translations en_us.json (Russian)

* New translations en_us.json (Turkish)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Indonesian)

* New translations en_us.jso

--- a/src/languages/ar_AR.json
+++ b/src/languages/ar_AR.json
@@ -13,7 +13,7 @@
       "show": "أظهر",
       "show_all": "اظهر الكل",
       "show_less": "أظهر أقل",
-      "tab_balances": "الأرصدة",
+      "tab_tokens": "رموز",
       "tab_balances_empty_state": "رصيد",
       "tab_balances_tooltip": "أرصدة Ethereum والرموز",
       "tab_claimables": "المراد المطالبة بها",
@@ -23,6 +23,7 @@
       "tab_investments": "المجمعات",
       "tab_savings": "التوفير",
       "tab_showcase": "عرض",
+      "tab_perps": "الرافعات المالية",
       "tab_points": "النقاط",
       "tab_positions": "المواقف",
       "tab_rewards": "المكافآت",
@@ -707,15 +708,18 @@
           "website": "الموقع الإلكتروني",
           "reddit": "رديت",
           "telegram": "تيليجرام",
-          "twitter": "تويتر",
-          "warpcast": "ووربكاست",
+          "twitter": "X/تويتر)",
           "farcaster": "فاركاستر",
           "other": "آخر",
-          "search_on_twitter": "بحث على تويتر"
+          "search_on_twitter": "بحث على X"
         },
         "uniswap_liquidity": "سيولة يونيسواب",
         "value": "القيمة",
         "volume_24_hours": "الحجم في 24 ساعة",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "القيمة أقل من",
+          "due_to_low_liquidity": "بسبب السيولة المنخفضة"
+        },
         "menu": {
           "view_on": "اعرض على %{blockExplorerName}",
           "share": "شارك",
@@ -774,10 +778,10 @@
       "chart": {
         "candlestick": {
           "candle_field_labels": {
-            "c": "إغلاق",
+            "c": "أغلق",
             "h": "مرتفع",
             "l": "منخفض",
-            "o": "الافتتاح",
+            "o": "افتح",
             "t": "",
             "v": "حجم"
           },
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "تم الإزالة من العرض",
         "refreshing": "تحديث البيانات الوصفية...",
         "reported": "تم الإبلاغ عنه كرسالة غير مرغوب فيها",
-        "twitter": "تويتر",
+        "twitter": "X/تويتر)",
         "view_all_with_property": "عرض الكل بالخاصية",
         "view_collection": "عرض المجموعة",
         "view_on_marketplace": "عرض على السوق...",
@@ -958,7 +962,7 @@
       "poolboy_title": "لقد قمت بفتح\nRainbow Poolboy!",
       "adworld_description": "باعتبارك أحد مواطني Rainbow World، يمكنك الآن فتح أيقونة تطبيق AdWorld x Rainbow إصدار خاص.",
       "adworld_title": "مرحبًا بك في Rainbow World!",
-      "farcaster_description": "أيقونة تطبيقنا الأكثر مللاً على الإطلاق، مستوحاة من البساطة الباهتة لـ Warpcast.",
+      "farcaster_description": "أيقونة تطبيقنا الأكثر مللاً على الإطلاق، مستوحاة من البساطة الباهتة لـ Farcaster.",
       "farcaster_title": "لقد قمت بفتح\nRainbowcast",
       "redacted_description": "أيقونة قوس قزح حصرية لـ stupi لمحبي Gdupi الحقيقيين.",
       "redacted_title": "لقد فتحت\nقوس قزح المكمم",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "تم نسخ العنوان إلى الحافظة"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "غير متاح",
+        "current_price": "السعر الحالي",
+        "title": "الرافعات المالية",
+        "error_submitting_order": "خطأ في إرسال الطلب",
+        "submitting": "جار الإرسال...",
+        "more": "أكثر",
+        "error": "خطأ",
+        "cancel": "إلغاء",
+        "liq_price": "سعر التصفية",
+        "liq": "تصفية"
+      },
+      "feature_card": {
+        "title": "الرافعات المالية",
+        "subtitle": "التداول عالي المخاطر، عالي المكافأة"
+      },
+      "actions": {
+        "fund_wallet": "تمويل المحفظة",
+        "new_position": "موقع جديد",
+        "close_position": "إغلاق الموقع",
+        "open_position": "فتح موقع"
+      },
+      "account": {
+        "available_balance": "الرصيد المتاح"
+      },
+      "markets": {
+        "title": "الأسواق",
+        "up_to": "حتى",
+        "already_open": "مفتوح مسبقًا"
+      },
+      "deposit": {
+        "title": "إيداع",
+        "no_balance": "لا يوجد رصيد",
+        "receive": "استلم",
+        "slider_label": "إيداع",
+        "zero_amount_error": "أدخل كمية للإيداع",
+        "confirm_button_text": "اضغط للإيداع",
+        "confirm_button_loading_text": "إيداع...",
+        "confirm_button_zero_text": "أدخل كمية",
+        "confirm_button_over_balance_text": "أموال غير كافية",
+        "confirm_button_error_text": "خطأ في عرض السعر",
+        "quote_error": "􀇿 لا يوجد اقتباس متاح",
+        "insufficient_balance": "􀫲 أموال غير كافية"
+      },
+      "withdraw": {
+        "title": "سحب",
+        "slider_label": "سحب",
+        "confirm_button_text": "اضغط مع الاستمرار للسحب",
+        "confirm_button_loading_text": "سحب...",
+        "available_balance_suffix": " متاح",
+        "confirm_button_zero_text": "أدخل كمية",
+        "confirm_button_over_balance_text": "أموال غير كافية",
+        "info_card_title_prefix": "سحب إلى ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "شبكات إضافية ستتوفر قريبًا. حاليًا تشمل السحوبات رسوم Hyperliquid بقيمة 1.00 دولار."
+      },
+      "position_side": {
+        "long": "طويلة",
+        "short": "قصيرة"
+      },
+      "positions": {
+        "entry": "دخول",
+        "mark_price": "سعر العلامة",
+        "open_positions": "المواقع المفتوحة",
+        "no_open_positions": "لا توجد مواقع مفتوحة",
+        "position_value": "قيمة الموقع",
+        "mark_price_full": "سعر العلامة",
+        "entry_price": "سعر الدخول",
+        "funding": "التمويل",
+        "liquidation_price": "سعر التصفية",
+        "total": "المجموع",
+        "learn_more_about_perps": "تعرف أكثر على بيربز"
+      },
+      "new_position": {
+        "hold_to_long": "استمر للطول",
+        "hold_to_short": "استمر للقصر",
+        "liquidated_at": "تم التصفية عند",
+        "from_current_price": "من السعر الحالي",
+        "details": "تفاصيل",
+        "funding_rate": "معدل التمويل",
+        "max_slippage": "الانزلاق الأقصى",
+        "no_liquidation_risk": "لا يوجد خطر تصفية",
+        "trading_without_leverage": "التداول بدون رافعة مالية"
+      },
+      "inputs": {
+        "amount": "الكمية",
+        "available": "متاح",
+        "max": "الحد الأقصى",
+        "maximum_amount_is": "الحد الأقصى هو",
+        "minimum": "الأقل",
+        "minimum_amount_is": "الحد الأدنى هو",
+        "no_balance": "لا يوجد رصيد"
+      },
+      "history": {
+        "title": "التاريخ",
+        "no_trades": "لا توجد تداولات",
+        "trade_execution": {
+          "take_profit_executed": "تنفيذ جني الأرباح",
+          "stop_loss_executed": "تنفيذ وقف الخسارة",
+          "long_opened": "فتح طويل",
+          "short_opened": "فتح قصير",
+          "long_closed": "إغلاق طويل",
+          "short_closed": "إغلاق قصير",
+          "long_liquidated": "تصفية طويلة",
+          "short_liquidated": "تصفية قصيرة"
+        }
+      },
+      "trigger_orders": {
+        "title": "أوامر الزناد",
+        "take_profit": "جني الأرباح",
+        "stop_loss": "وقف الخسارة",
+        "sell": "بيع",
+        "cancel_failed": "فشل في إلغاء الطلب",
+        "add_stop_loss": "إضافة وقف الخسارة",
+        "add_take_profit": "إضافة جني الأرباح",
+        "price": "السعر",
+        "projected_profit": "الربح المتوقع",
+        "projected_loss": "الخسارة المتوقعة",
+        "add": "أضف",
+        "adding": "جاري الإضافة...",
+        "above": "أعلى",
+        "below": "أدناه",
+        "must_be": "يجب أن تكون",
+        "failed_to_create": "فشل في إنشاء أمر الزناد"
+      },
+      "search": {
+        "search_markets": "البحث في الأسواق",
+        "markets_count": "٪{count} أسواق ",
+        "choose_a_market": "اختيار سوق"
+      },
+      "close_position": {
+        "estimated_loss": "الخسارة المقدرة",
+        "estimated_profit": "الربح المقدر",
+        "minimum_amount_is": "الحد الأدنى هو",
+        "closing": "جاري الإغلاق...",
+        "hold_to_close": "استمر للإغلاق"
+      },
+      "explain_sheet": {
+        "next": "التالي",
+        "got_it": "فهمت",
+        "title": "الرافعات المالية",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "العقود الآجلة الدائمة"
+            ],
+            "subtitle_parts": [
+              "راهن على تحركات الأسعار. افتح وأغلق المواقع حينما تشاء، دون انتهاء صلاحيتها. مدعوم من Hyperliquid."
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "اذهب",
+              "طويلة",
+              "أو",
+              "قصيرة"
+            ],
+            "subtitle_parts": [
+              "طويلًا عندما تعتقد أن السعر سيرتفع. قصيرًا عندما تعتقد أنه سينخفض. اربح عندما تتوقع الاتجاه بشكل صحيح."
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "التداول بالرافعة المالية"
+            ],
+            "subtitle_parts": [
+              "تضخم الرافعة المالية من مخاطرك. مكاسب أكبر عندما تكون على حق. خسائر أسرع، وتصفية، عندما تكون مخطئًا."
+            ]
+          }
+        }
+      },
+      "leverage": "الرافعة المالية",
+      "up_to": "حتى"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "قريباً",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "الأرباح المكتسبة",
         "current_value": "القيمة الحالية",
         "rainbow_users_have_earned": "لقد حصل مستخدمو Rainbow على",
-        "earn_eth_rewards": "اكسب مكافآت ETH",
-        "rewards_explainer": "كل أسبوع، سيحصل الكاسبين في أعلى النقاط الأسبوعية على جزء من عائدات Rainbow's على السلسلة. اجمع النقاط عن طريق التبديل أو التعامل على Rainbow، أو استخدام dapps، أو إحالة الأصدقاء.",
         "my_points": "نقاطي",
         "refer_friends": "إحالة الأصدقاء",
         "try_again": "حاول مرة أخرى",
@@ -1801,7 +1978,7 @@
         "skip": "تخطي",
         "snapchat": "سناب شات",
         "telegram": "تيليجرام",
-        "twitter": "تويتر",
+        "twitter": "X/تويتر)",
         "upload_photo": "تحميل صورة",
         "uploading": "جارٍ الرفع",
         "username_placeholder": "اسم المستخدم",
@@ -2157,7 +2334,7 @@
       "done": "تم",
       "feedback_and_reports": "الملاحظات وتقارير الأخطاء",
       "feedback_and_support": "التعليقات والدعم",
-      "follow_us_on_twitter": "تابعنا على تويتر",
+      "follow_us_on_twitter": "تابعنا على X",
       "hey_friend_message": "👋️ مرحبا صديقي! يجب أن تقوم بتنزيل Rainbow، فهو المحفظة المفضلة لدي في Ethereum 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "الإعدادات",
       "language": "اللغة",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "رصيد متاح: %{balance}",
-        "title": "شراء المزيد من الرموز مسبقًا"
+        "title": "شراء الرموز مسبقاً"
       },
       "review": {
         "token_allocation": "تخصيص الرمز",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/تويتر",
+          "name": "X/تويتر)",
           "placeholder": "اسم المستخدم"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "تم",
     "copy": "نسخ",
     "paste": "لصق",
+    "new": "جديد",
     "market_data": {
       "vol": "الحجم",
       "price": "السعر",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "السباق مباشر",
             "subtitle_parts": [
-              "الرمز صاحب أعلى",
+              "الملك الحالي هو الرمز الذي تم إنشاؤه في آخر 30 يوماً والذي حقق أكثر شهرة",
               " حجم الشراء ",
-              "الآن هو الملك الحالي."
+              "اليوم."
             ]
           },
           "step_2": {
