--- a/src/languages/hi_IN.json
+++ b/src/languages/hi_IN.json
@@ -13,7 +13,7 @@
       "show": "दिखाएं",
       "show_all": "सभी दिखाएं",
       "show_less": "कम दिखाएं",
-      "tab_balances": "बैलेंस",
+      "tab_tokens": "Tokens",
       "tab_balances_empty_state": "बैलेंस",
       "tab_balances_tooltip": "इथेरियम और टोकन बैलेंस",
       "tab_claimables": "दावा करने योग्य",
@@ -23,6 +23,7 @@
       "tab_investments": "पूल्स",
       "tab_savings": "बचत",
       "tab_showcase": "शोकेस",
+      "tab_perps": "परप्स",
       "tab_points": "अंक",
       "tab_positions": "पोजीशन्स",
       "tab_rewards": "इनाम",
@@ -707,15 +708,18 @@
           "website": "वेबसाइट",
           "reddit": "रेडिट",
           "telegram": "टेलीग्राम",
-          "twitter": "ट्विटर",
-          "warpcast": "वार्पकास्ट",
+          "twitter": "एक्स (ट्विटर)",
           "farcaster": "फ़ारकास्टर",
           "other": "अन्य",
-          "search_on_twitter": "ट्विटर पर खोजें"
+          "search_on_twitter": "एक्स पर खोजें"
         },
         "uniswap_liquidity": "यूनिस्वैप लिक्विडिटी",
         "value": "मूल्य",
         "volume_24_hours": "24घंटे की मात्रा",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "मूल्य इसके से कम है",
+          "due_to_low_liquidity": "􀇿 कम तरलता के कारण"
+        },
         "menu": {
           "view_on": "देखें %{blockExplorerName}पर",
           "share": "साझा करें",
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "शोकेस से निकाला गया",
         "refreshing": "मेटाडाटा ताज़ा किया जा रहा है...",
         "reported": "स्पैम के रूप में रिपोर्ट किया गया",
-        "twitter": "ट्विटर",
+        "twitter": "एक्स (ट्विटर)",
         "view_all_with_property": "संपत्ति के साथ सभी देखें",
         "view_collection": "संग्रह देखें",
         "view_on_marketplace": "मार्केटप्लेस पर देखें...",
@@ -958,7 +962,7 @@
       "poolboy_title": "आपने अनलॉक कर लिया है\nरेनबो पूलबॉय!",
       "adworld_description": "रेनबो वर्ल्ड नागरिक के रूप में, आप अब एक विशेष संस्करण अनलॉक कर सकते हैं\nएडवर्ल्ड एक्स रेनबो ऐप आइकन।",
       "adworld_title": "रेनबो वर्ल्ड में आपका स्वागत है!",
-      "farcaster_description": "हमारा सबसे बोरिंग ऐप आइकन, वार्पकास्ट के सुस्त न्यूनतमवाद से प्रेरित।",
+      "farcaster_description": "हमारा सबसे बोरिंग ऐप आइकन, फारकास्टर के सुस्त न्यूनतमवाद से प्रेरित।",
       "farcaster_title": "आपने अनलॉक कर लिया है\nरेनबो कास्ट",
       "redacted_description": "सच्चे Gdupi एनजॉयर्स के लिए एक अनन्य Rainbow आइकन।",
       "redacted_title": "आपने\nरेडैक्टेड रेनबो को अनलॉक कर दिया",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "पता क्लिपबोर्ड में कॉपी किया गया"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "उपलब्ध नहीं",
+        "current_price": "वर्तमान मूल्य",
+        "title": "परप्स",
+        "error_submitting_order": "ऑर्डर सबमिट करने में त्रुटि",
+        "submitting": "संदेश भेजा जा रहा है...",
+        "more": "अधिक",
+        "error": "त्रुटि",
+        "cancel": "रद्द करें",
+        "liq_price": "लिक्विडेशन मूल्य",
+        "liq": "लिक्विड"
+      },
+      "feature_card": {
+        "title": "परप्स",
+        "subtitle": "उच्च जोखिम, उच्च इनाम ट्रेडिंग"
+      },
+      "actions": {
+        "fund_wallet": "वॉलेट फंड करें",
+        "new_position": "नया स्थान",
+        "close_position": "स्थान बंद करें",
+        "open_position": "स्थान खोलें"
+      },
+      "account": {
+        "available_balance": "उपलब्ध शेष राशि"
+      },
+      "markets": {
+        "title": "बाज़ार",
+        "up_to": "तक",
+        "already_open": "पहले से खुला"
+      },
+      "deposit": {
+        "title": "जमा",
+        "no_balance": "कोई बैलेंस नहीं",
+        "receive": "प्राप्त करें",
+        "slider_label": "जमा कर रहे हैं",
+        "zero_amount_error": "जमा करने के लिए राशि दर्ज करें",
+        "confirm_button_text": "जमा करने के लिए दबाएं रखें",
+        "confirm_button_loading_text": "जमा कर रहे हैं...",
+        "confirm_button_zero_text": "राशि दर्ज करें",
+        "confirm_button_over_balance_text": "अपर्याप्त धन",
+        "confirm_button_error_text": "कोट त्रुटि",
+        "quote_error": "􀇿 कोई भाव उपलब्ध नहीं है",
+        "insufficient_balance": "􀫲 अपर्याप्त धन"
+      },
+      "withdraw": {
+        "title": "निकासी",
+        "slider_label": "निकासी कर रहे हैं",
+        "confirm_button_text": "निकासी के लिए होल्ड करें",
+        "confirm_button_loading_text": "निकासी कर रहे हैं...",
+        "available_balance_suffix": " उपलब्ध",
+        "confirm_button_zero_text": "राशि दर्ज करें",
+        "confirm_button_over_balance_text": "अपर्याप्त धन",
+        "info_card_title_prefix": "की ओर निकाल रहे हैं ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "अतिरिक्त नेटवर्क्स जल्द आ रहे हैं। वर्तमान में निकासी में $1.00 हायपरलिक्विड शुल्क शामिल है।"
+      },
+      "position_side": {
+        "long": "लंबा",
+        "short": "छोटा"
+      },
+      "positions": {
+        "entry": "प्रवेश",
+        "mark_price": "मार्क मूल्य",
+        "open_positions": "खुली स्थितियां",
+        "no_open_positions": "कोई खुली स्थिति नहीं",
+        "position_value": "स्थिति का मूल्य",
+        "mark_price_full": "मार्क मूल्य",
+        "entry_price": "प्रवेश मूल्य",
+        "funding": "फंडिंग",
+        "liquidation_price": "लिक्विडेशन मूल्य",
+        "total": "कुल",
+        "learn_more_about_perps": "Perps के बारे में अधिक जानें"
+      },
+      "new_position": {
+        "hold_to_long": "लंबा करने के लिए पकड़ें",
+        "hold_to_short": "छोटा करने के लिए पकड़ें",
+        "liquidated_at": "पर लिक्विडेट किया",
+        "from_current_price": "वर्तमान मूल्य से",
+        "details": "विवरण",
+        "funding_rate": "फंडिंग दर",
+        "max_slippage": "अधिकतम स्लिपेज",
+        "no_liquidation_risk": "कोई लिक्विडेशन जोखिम नहीं",
+        "trading_without_leverage": "बिना लीवरेज के ट्रेडिंग"
+      },
+      "inputs": {
+        "amount": "राशि",
+        "available": "उपलब्ध",
+        "max": "अधिकतम",
+        "maximum_amount_is": "अधिकतम राशि है",
+        "minimum": "न्यूनतम",
+        "minimum_amount_is": "न्यूनतम राशि है",
+        "no_balance": "कोई बैलेंस नहीं"
+      },
+      "history": {
+        "title": "इतिहास",
+        "no_trades": "कोई ट्रेड नहीं",
+        "trade_execution": {
+          "take_profit_executed": "लाभ प्राप्त किया",
+          "stop_loss_executed": "स्टॉप हानि निष्पादित",
+          "long_opened": "लंबा खोला गया",
+          "short_opened": "छोटा खोला गया",
+          "long_closed": "लंबा बंद किया गया",
+          "short_closed": "छोटा बंद किया गया",
+          "long_liquidated": "लंबा लिक्विडेट किया गया",
+          "short_liquidated": "छोटा लिक्विडेट किया गया"
+        }
+      },
+      "trigger_orders": {
+        "title": "ट्रिगर ऑर्डर्स",
+        "take_profit": "लाभ प्राप्त करें",
+        "stop_loss": "स्टॉप हानि",
+        "sell": "बेचें",
+        "cancel_failed": "ऑर्डर रद्द करने में विफल",
+        "add_stop_loss": "स्टॉप हानि जोड़ें",
+        "add_take_profit": "लाभ जोड़ें",
+        "price": "मूल्य",
+        "projected_profit": "अनुमानित लाभ",
+        "projected_loss": "अनुमानित हानि",
+        "add": "जोड़ें",
+        "adding": "जोड़ रहे हैं...",
+        "above": "से ऊपर",
+        "below": "से नीचे",
+        "must_be": "होना चाहिए",
+        "failed_to_create": "ट्रिगर ऑर्डर बनाना विफल"
+      },
+      "search": {
+        "search_markets": "बाज़ार खोजें",
+        "markets_count": "%{count} बाज़ार",
+        "choose_a_market": "एक बाज़ार चुनें"
+      },
+      "close_position": {
+        "estimated_loss": "अनुमानित हानि",
+        "estimated_profit": "अनुमानित लाभ",
+        "minimum_amount_is": "न्यूनतम राशि है",
+        "closing": "बंद कर रहे हैं...",
+        "hold_to_close": "बंद करने के लिए पकड़ें"
+      },
+      "explain_sheet": {
+        "next": "अगला",
+        "got_it": "समझ गया",
+        "title": "परप्स",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "पारंपरिक वायदा"
+            ],
+            "subtitle_parts": [
+              "मूल्य परिवर्तनों पर सट्टा लगाएं। अपनी इच्छानुसार स्थिति खोलें और बंद करें, कोई समाप्ति नहीं।\nHyperliquid द्वारा संचालित।"
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "जाओ",
+              "लंबा",
+              "या",
+              "छोटा"
+            ],
+            "subtitle_parts": [
+              "जब आपको लगता है कि मूल्य बढ़ेगा तो लंबा करें। जब आपको लगता है कि यह गिरेगा तब छोटा करें। जब आप सही दिशा में रहें तो लाभ कमाएं।"
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "लीवरेज के साथ व्यापार करें"
+            ],
+            "subtitle_parts": [
+              "लीवरेज आपके जोखिम को बढ़ाता है। जब आप सही हों तो बड़े लाभ। जब आप गलत हों तो तेजी से हानि और लिक्विडेशन।"
+            ]
+          }
+        }
+      },
+      "leverage": "लीवरेज",
+      "up_to": "ऊपर तक"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "जल्द आ रहा है",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "दावा की गई कमाई",
         "current_value": "वर्तमान मूल्य",
         "rainbow_users_have_earned": "रेनबो उपयोगकर्ताओं ने कमाए हैं",
-        "earn_eth_rewards": "ETH पुरस्कार अर्जित करें",
-        "rewards_explainer": "हर सप्ताह, शीर्ष साप्ताहिक अंक अर्जित करने वालों को रेनबो की ऑनचेन राजस्व का एक हिस्सा प्राप्त होगा। रेनबो में स्वैप या लेनदेन करके, dapps का उपयोग करके, या दोस्तों को रेफर करके अंक अर्जित करें।",
         "my_points": "मेरे अंक",
         "refer_friends": "दोस्तों को रेफर करें",
         "try_again": "फिर से प्रयास करें",
@@ -1801,7 +1978,7 @@
         "skip": "छोड़ें",
         "snapchat": "स्नैपचैट",
         "telegram": "टेलीग्राम",
-        "twitter": "ट्विटर",
+        "twitter": "एक्स (ट्विटर)",
         "upload_photo": "एक फ़ोटो अपलोड करें",
         "uploading": "अपलोड हो रहा है",
         "username_placeholder": "उपयोगकर्ता नाम",
@@ -2157,7 +2334,7 @@
       "done": "हो गया",
       "feedback_and_reports": "प्रतिक्रिया और बग रिपोर्ट्स",
       "feedback_and_support": "प्रतिक्रिया और समर्थन",
-      "follow_us_on_twitter": "हमें Twitter पर फॉलो करें",
+      "follow_us_on_twitter": "हमें एक्स पर फॉलो करें",
       "hey_friend_message": "👋️ हे मित्र! आपको रेनबो डाउनलोड करना चाहिए, यह मेरा पसंदीदा Ethereum वॉलेट है 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "सेटिंग्स",
       "language": "भाषा",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "उपलब्ध शेष राशि: %{balance}",
-        "title": "अग्रिम हेतु अधिक टोकन खरीदें"
+        "title": "अग्रिम हेतु टोकन खरीदें"
       },
       "review": {
         "token_allocation": "टोकन आवंटन",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "एक्स/ट्विटर",
+          "name": "एक्स (ट्विटर)",
           "placeholder": "उपयोगकर्ता नाम"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "हो गया",
     "copy": "कॉपी",
     "paste": "चिपकाएं",
+    "new": "नया",
     "market_data": {
       "vol": "वॉल्यूम",
       "price": "कीमत",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "रेस लाइव है",
             "subtitle_parts": [
-              "सबसे अधिक वाला टोकन",
+              "वर्तमान राजा वह टोकन है जो पिछले 30 दिनों में सबसे अधिक बनाया गया था",
               " खरीद वॉल्यूम ",
-              "अभी वर्तमान किंग है।"
+              "आज।"
             ]
           },
           "step_2": {
