--- a/src/languages/ja_JP.json
+++ b/src/languages/ja_JP.json
@@ -13,7 +13,7 @@
       "show": "表示",
       "show_all": "すべて表示",
       "show_less": "表示を短縮",
-      "tab_balances": "残高",
+      "tab_tokens": "トークン",
       "tab_balances_empty_state": "残高",
       "tab_balances_tooltip": "イーサリアムとトークンの残高",
       "tab_claimables": "請求可能",
@@ -23,6 +23,7 @@
       "tab_investments": "プール",
       "tab_savings": "貯蓄",
       "tab_showcase": "ショーケース",
+      "tab_perps": "\"Perps\"",
       "tab_points": "ポイント",
       "tab_positions": "ポジション",
       "tab_rewards": "報酬",
@@ -707,15 +708,18 @@
           "website": "ウェブサイト",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter",
-          "warpcast": "Warpcast",
+          "twitter": "Ｘ（ツイッター）",
           "farcaster": "Farcaster",
           "other": "その他",
-          "search_on_twitter": "Twitterで検索"
+          "search_on_twitter": "Xで検索"
         },
         "uniswap_liquidity": "ユニスワップ流動性",
         "value": "価値",
         "volume_24_hours": "24時間のボリューム",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "次の値よりも低い",
+          "due_to_low_liquidity": "流動性の低下により"
+        },
         "menu": {
           "view_on": "%{blockExplorerName}で表示する",
           "share": "共有する",
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "ショーケースから削除されました",
         "refreshing": "メタデータを更新中...",
         "reported": "スパムとして報告されました",
-        "twitter": "Twitter",
+        "twitter": "Ｘ（ツイッター）",
         "view_all_with_property": "プロパティですべて表示",
         "view_collection": "コレクションを表示",
         "view_on_marketplace": "マーケットプレースで表示...",
@@ -958,7 +962,7 @@
       "poolboy_title": "アンロック\nRainbow Poolboy!",
       "adworld_description": "Rainbow World Citizenとして、特別版のAdWorld x Rainbowアプリアイコンをアンロックできます。",
       "adworld_title": "ウェルカムトゥレインボーワールド！",
-      "farcaster_description": "Warpcastのシンプルなミニマリズムに触発された、最も退屈なアプリアイコン。",
+      "farcaster_description": "Farcasterのシンプルなミニマリズムに触発された、最も退屈なアプリアイコン。",
       "farcaster_title": "アンロック\nRainbowcast",
       "redacted_description": "真のGdupi愛好者のための独占的なRainbowアイコン。",
       "redacted_title": "ロック解除されました\nRedacted Rainbow",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "アドレスがクリップボードにコピーされました"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "N/A",
+        "current_price": "現在の価格",
+        "title": "\"Perps\"",
+        "error_submitting_order": "注文送信エラー",
+        "submitting": "送信中...",
+        "more": "もっと",
+        "error": "エラー",
+        "cancel": "キャンセル",
+        "liq_price": "清算価格",
+        "liq": "清算"
+      },
+      "feature_card": {
+        "title": "\"Perps\"",
+        "subtitle": "ハイリスク・ハイリターンの取引"
+      },
+      "actions": {
+        "fund_wallet": "ウォレットに資金を追加",
+        "new_position": "新規ポジション",
+        "close_position": "ポジションをクローズする",
+        "open_position": "ポジションをオープンする"
+      },
+      "account": {
+        "available_balance": "利用可能残高"
+      },
+      "markets": {
+        "title": "マーケット",
+        "up_to": "最大",
+        "already_open": "既にオープン済み"
+      },
+      "deposit": {
+        "title": "預金",
+        "no_balance": "残高なし",
+        "receive": "受け取る",
+        "slider_label": "預け入れ中",
+        "zero_amount_error": "入金額を入力してください",
+        "confirm_button_text": "デポジット保留中",
+        "confirm_button_loading_text": "預け入れ中...",
+        "confirm_button_zero_text": "金額を入力してください",
+        "confirm_button_over_balance_text": "資金が不足しています",
+        "confirm_button_error_text": "見積りエラー",
+        "quote_error": "􀇿 見積もりは利用できません",
+        "insufficient_balance": "􀫲 資金が不足しています"
+      },
+      "withdraw": {
+        "title": "引き出す",
+        "slider_label": "引き出し中",
+        "confirm_button_text": "引き出しを保持",
+        "confirm_button_loading_text": "引き出し中...",
+        "available_balance_suffix": " 利用可能",
+        "confirm_button_zero_text": "金額を入力してください",
+        "confirm_button_over_balance_text": "資金が不足しています",
+        "info_card_title_prefix": "への引き出し",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "追加のネットワークが近日中に登場予定です。現在、引き出しには$1.00のHyperliquid手数料がかかります。"
+      },
+      "position_side": {
+        "long": "ロング",
+        "short": "ショート"
+      },
+      "positions": {
+        "entry": "エントリー",
+        "mark_price": "マーケット価格",
+        "open_positions": "オープンポジション",
+        "no_open_positions": "オープンポジションなし",
+        "position_value": "ポジションバリュー",
+        "mark_price_full": "マーケット価格",
+        "entry_price": "エントリー価格",
+        "funding": "資金調達",
+        "liquidation_price": "清算価格",
+        "total": "合計",
+        "learn_more_about_perps": "Perpsについてもっと学びましょう"
+      },
+      "new_position": {
+        "hold_to_long": "ロングするにはホールド",
+        "hold_to_short": "ショートするにはホールド",
+        "liquidated_at": "清算された価格",
+        "from_current_price": "現在の価格から",
+        "details": "詳細",
+        "funding_rate": "ファンディングレート",
+        "max_slippage": "最大スリッページ",
+        "no_liquidation_risk": "清算リスクなし",
+        "trading_without_leverage": "レバレッジなしでの取引"
+      },
+      "inputs": {
+        "amount": "金額",
+        "available": "利用可能",
+        "max": "最大",
+        "maximum_amount_is": "最大金額は",
+        "minimum": "最小",
+        "minimum_amount_is": "最小金額は",
+        "no_balance": "残高なし"
+      },
+      "history": {
+        "title": "履歴",
+        "no_trades": "取引なし",
+        "trade_execution": {
+          "take_profit_executed": "利食い実行済み",
+          "stop_loss_executed": "ストップロス実行済み",
+          "long_opened": "ロング開始",
+          "short_opened": "ショート開始",
+          "long_closed": "ロング終了",
+          "short_closed": "ショート終了",
+          "long_liquidated": "ロング清算",
+          "short_liquidated": "ショート清算"
+        }
+      },
+      "trigger_orders": {
+        "title": "トリガーオーダー",
+        "take_profit": "利食い",
+        "stop_loss": "ストップロス",
+        "sell": "売却",
+        "cancel_failed": "注文のキャンセルに失敗しました",
+        "add_stop_loss": "ストップロスを追加",
+        "add_take_profit": "利益確定の追加",
+        "price": "価格",
+        "projected_profit": "予測利益",
+        "projected_loss": "予測損失",
+        "add": "追加",
+        "adding": "追加中...",
+        "above": "上で",
+        "below": "下で",
+        "must_be": "である必要があります",
+        "failed_to_create": "トリガー注文作成に失敗しました"
+      },
+      "search": {
+        "search_markets": "マーケットを検索",
+        "markets_count": "%{count} メーカー",
+        "choose_a_market": "マーケットを選択"
+      },
+      "close_position": {
+        "estimated_loss": "予測損失",
+        "estimated_profit": "予測利益",
+        "minimum_amount_is": "最小金額は",
+        "closing": "クローズ中...",
+        "hold_to_close": "クローズするにはホールド"
+      },
+      "explain_sheet": {
+        "next": "次へ",
+        "got_it": "理解しました",
+        "title": "\"Perps\"",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "永久先物"
+            ],
+            "subtitle_parts": [
+              "価格変動に賭けよう。いつでもポジションをオープンし、クローズできます。期限なし。\nHyperliquidが提供。"
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "行く",
+              "ロング",
+              "または",
+              "ショート"
+            ],
+            "subtitle_parts": [
+              "価格が上がると思った時はロング。下がると思った時はショート。方向性をうまく予想して利益を上げましょう。"
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "レバレッジで取引"
+            ],
+            "subtitle_parts": [
+              "レバレッジはリスクを増幅します。当たりの時は大きな利益、間違いの時は速い損失と清算。"
+            ]
+          }
+        }
+      },
+      "leverage": "レバレッジ",
+      "up_to": "最大"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "近日公開",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "請求された収益",
         "current_value": "現在の値",
         "rainbow_users_have_earned": "Rainbowユーザーが稼いだ",
-        "earn_eth_rewards": "ETH報酬を稼ぐ",
-        "rewards_explainer": "毎週、トップ週次ポイント獲得者はRainbowのオンチェーン収益の一部を受け取ります。 Rainbowでのスワップまたはトランザクション、dappsの使用、または友達を紹介してポイントを集めましょう。",
         "my_points": "私のポイント",
         "refer_friends": "友達を紹介",
         "try_again": "再試行",
@@ -1801,7 +1978,7 @@
         "skip": "スキップ",
         "snapchat": "スナップチャット",
         "telegram": "Telegram",
-        "twitter": "Twitter",
+        "twitter": "Ｘ（ツイッター）",
         "upload_photo": "写真をアップロード",
         "uploading": "アップロード中",
         "username_placeholder": "ユーザー名",
@@ -2157,7 +2334,7 @@
       "done": "完了",
       "feedback_and_reports": "Feedback & Bug Reports",
       "feedback_and_support": "Feedback and Support",
-      "follow_us_on_twitter": "Follow us on Twitter",
+      "follow_us_on_twitter": "Xでフォローする",
       "hey_friend_message": "👋️ Hey friend! Rainbowをダウンロードするべきです。これは私のお気に入りのイーサリアムウォレットです 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "設定",
       "language": "Language",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "利用可能残高: %{balance}",
-        "title": "プリバイでトークンをさらに購入"
+        "title": "プリバイでトークンを購入"
       },
       "review": {
         "token_allocation": "トークン配分",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/Twitter",
+          "name": "Ｘ（ツイッター）",
           "placeholder": "ユーザー名"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "完了",
     "copy": "Copy",
     "paste": "貼り付け",
+    "new": "新しい",
     "market_data": {
       "vol": "ボリューム",
       "price": "価格",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "レースが開始",
             "subtitle_parts": [
-              "ほとんどの",
+              "現在のキングは、過去30日間に作成されたトークンで、",
               " 購入ボリューム ",
-              "今現在、これは現行のキングです。"
+              "今日。"
             ]
           },
           "step_2": {
