--- a/src/languages/ru_RU.json
+++ b/src/languages/ru_RU.json
@@ -13,7 +13,7 @@
       "show": "Показать",
       "show_all": "Показать все",
       "show_less": "Показать меньше",
-      "tab_balances": "Балансы",
+      "tab_tokens": "Токены",
       "tab_balances_empty_state": "Баланс",
       "tab_balances_tooltip": "Балансы Ethereum и токенов",
       "tab_claimables": "Доступные к получению",
@@ -23,6 +23,7 @@
       "tab_investments": "Пулы",
       "tab_savings": "Сбережения",
       "tab_showcase": "Витрина",
+      "tab_perps": "Perps",
       "tab_points": "Очки",
       "tab_positions": "Позиции",
       "tab_rewards": "Награды",
@@ -707,15 +708,18 @@
           "website": "Веб-сайт",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter",
-          "warpcast": "Warpcast",
+          "twitter": "X (Twitter)",
           "farcaster": "Farcaster",
           "other": "Другие",
-          "search_on_twitter": "Поиск в Twitter"
+          "search_on_twitter": "Искать на X"
         },
         "uniswap_liquidity": "Ликвидность Uniswap",
         "value": "Цена",
         "volume_24_hours": "Торговый объем за 24 часа",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "Значение ниже чем",
+          "due_to_low_liquidity": "из-за низкой ликвидности"
+        },
         "menu": {
           "view_on": "Посмотреть на %{blockExplorerName}",
           "share": "Поделиться",
@@ -774,10 +778,10 @@
       "chart": {
         "candlestick": {
           "candle_field_labels": {
-            "c": "Закрыть",
+            "c": "ЗАКРЫТЬ",
             "h": "H",
             "l": "L",
-            "o": "Открыть",
+            "o": "ОТКРЫТЬ",
             "t": "",
             "v": "V"
           },
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "Удалено из витрины",
         "refreshing": "Обновление метаданных...",
         "reported": "Пожаловано как спам",
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "view_all_with_property": "Просмотреть все свойства",
         "view_collection": "Просмотреть коллекцию",
         "view_on_marketplace": "Просмотреть на Marketplace...",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "Адрес скопирован в буфер обмена"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "Н/Д",
+        "current_price": "Текущая цена",
+        "title": "Perps",
+        "error_submitting_order": "Ошибка при подаче ордера",
+        "submitting": "Отправка...",
+        "more": "Больше",
+        "error": "Ошибка",
+        "cancel": "Отменить",
+        "liq_price": "Цена ликв.",
+        "liq": "ликв."
+      },
+      "feature_card": {
+        "title": "Perps",
+        "subtitle": "Торговля с высоким риском и высокой наградой"
+      },
+      "actions": {
+        "fund_wallet": "Пополнить мой кошелек",
+        "new_position": "Новая позиция",
+        "close_position": "Закрыть позицию",
+        "open_position": "Открыть позицию"
+      },
+      "account": {
+        "available_balance": "Доступный баланс"
+      },
+      "markets": {
+        "title": "Рынки",
+        "up_to": "ДО",
+        "already_open": "Уже открыто"
+      },
+      "deposit": {
+        "title": "Депозит",
+        "no_balance": "Нет Баланса",
+        "receive": "Получить",
+        "slider_label": "Пополнение",
+        "zero_amount_error": "Введите сумму для депозита",
+        "confirm_button_text": "Удерживайте для внесения депозита",
+        "confirm_button_loading_text": "Пополнение...",
+        "confirm_button_zero_text": "Введите сумму",
+        "confirm_button_over_balance_text": "Недостаточно средств",
+        "confirm_button_error_text": "Ошибка котировки",
+        "quote_error": "􀇿 Нет доступной цитаты",
+        "insufficient_balance": "􀫲 Недостаточно средств"
+      },
+      "withdraw": {
+        "title": "Вывести",
+        "slider_label": "Снятие",
+        "confirm_button_text": "Удерживайте для снятия",
+        "confirm_button_loading_text": "Снятие...",
+        "available_balance_suffix": " Доступны",
+        "confirm_button_zero_text": "Введите сумму",
+        "confirm_button_over_balance_text": "Недостаточно средств",
+        "info_card_title_prefix": "Снятие в ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "Новые сети будут скоро добавлены. Текущие снятия включают комиссию в размере $1,00 за Hyperliquid."
+      },
+      "position_side": {
+        "long": "Длинная",
+        "short": "Короткая"
+      },
+      "positions": {
+        "entry": "ВХОД",
+        "mark_price": "МАРКЕТИНГОВАЯ ЦЕНА",
+        "open_positions": "Открытые позиции",
+        "no_open_positions": "Нет открытых позиций",
+        "position_value": "Стоимость позиции",
+        "mark_price_full": "Маркетинговая цена",
+        "entry_price": "Цена входа",
+        "funding": "Финансирование",
+        "liquidation_price": "Цена ликвидации",
+        "total": "Всего",
+        "learn_more_about_perps": "Узнайте больше о Perps"
+      },
+      "new_position": {
+        "hold_to_long": "Удерживать, чтобы открыть длинную",
+        "hold_to_short": "Удерживать, чтобы открыть короткую",
+        "liquidated_at": "Ликвидировано по",
+        "from_current_price": "от текущей цены",
+        "details": "Подробности",
+        "funding_rate": "Ставка финансирования",
+        "max_slippage": "Максимальный скольжение",
+        "no_liquidation_risk": "Нет риска ликвидации",
+        "trading_without_leverage": "Торговля без рычагов"
+      },
+      "inputs": {
+        "amount": "Сумма",
+        "available": "Доступны",
+        "max": "Макс.",
+        "maximum_amount_is": "Максимальная сумма составляет",
+        "minimum": "Минимум",
+        "minimum_amount_is": "Минимальная сумма составляет",
+        "no_balance": "Нет Баланса"
+      },
+      "history": {
+        "title": "История",
+        "no_trades": "Нет сделок",
+        "trade_execution": {
+          "take_profit_executed": "Получение прибыли выполнено",
+          "stop_loss_executed": "Стоп-лосс выполнен",
+          "long_opened": "Открыта длинная",
+          "short_opened": "Открыта короткая",
+          "long_closed": "Закрыта длинная",
+          "short_closed": "Закрыта короткая",
+          "long_liquidated": "Ликвидирована длинная",
+          "short_liquidated": "Ликвидирована короткая"
+        }
+      },
+      "trigger_orders": {
+        "title": "Триггерные ордеры",
+        "take_profit": "Взять прибыль",
+        "stop_loss": "Стоп-лосс",
+        "sell": "Продать",
+        "cancel_failed": "Не удалось отменить ордер",
+        "add_stop_loss": "Добавить стоп-лосс",
+        "add_take_profit": "Добавить получение прибыли",
+        "price": "Цена",
+        "projected_profit": "Ожидаемая прибыль",
+        "projected_loss": "Ожидаемая потеря",
+        "add": "Добавить",
+        "adding": "Добавление...",
+        "above": "выше",
+        "below": "ниже",
+        "must_be": "Должен быть",
+        "failed_to_create": "Не удалось создать триггерный ордер"
+      },
+      "search": {
+        "search_markets": "Поиск рынков",
+        "markets_count": "%{count} РЫНКОВ",
+        "choose_a_market": "ВЫБЕРИТЕ РЫНОК"
+      },
+      "close_position": {
+        "estimated_loss": "Ожидаемая потеря",
+        "estimated_profit": "Ожидаемая прибыль",
+        "minimum_amount_is": "Минимальная сумма составляет",
+        "closing": "Закрытие...",
+        "hold_to_close": "Удерживайте, чтобы закрыть"
+      },
+      "explain_sheet": {
+        "next": "Далее",
+        "got_it": "Понятно",
+        "title": "Perps",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "Бессрочные фьючерсы"
+            ],
+            "subtitle_parts": [
+              "Ставка на ценовые движения. Открывайте и закрывайте позиции, когда вам угодно, без сроков истечения. Питается от Hyperliquid."
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "Вперед",
+              "Длинная",
+              "или",
+              "Короткая"
+            ],
+            "subtitle_parts": [
+              "Длинная позиция, когда считаете, что цена возрастет. Короткая, когда считаете, что она упадет. Получите прибыль, если вы угадали направление."
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "Торговля с кредитным плечом"
+            ],
+            "subtitle_parts": [
+              "Увеличение плеча увеличивает ваш риск. Больше прибыыл, если вы правы. Быстрее убытки и ликвидация, если вы ошибаетесь."
+            ]
+          }
+        }
+      },
+      "leverage": "Рычаг",
+      "up_to": "До"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "Скоро будет",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "Полученные заработки",
         "current_value": "Текущая стоимость",
         "rainbow_users_have_earned": "Каждую неделю лучшие зарабатыватели баллов получат часть дохода Rainbow в сети. Собирайте баллы, обменяя или проводя транзакции в Rainbow, используя dapps или приглашая друзей.",
-        "earn_eth_rewards": "Зарабатывайте ETH награды",
-        "rewards_explainer": "Каждую неделю лучшие зарабатыватели баллов получат часть дохода Rainbow в сети. Собирайте баллы, обменяя или проводя транзакции в Rainbow, используя dapps или приглашая друзей.",
         "my_points": "Мои баллы",
         "refer_friends": "Пригласить друзей",
         "try_again": "Попробуйте снова",
@@ -1801,7 +1978,7 @@
         "skip": "Пропустить",
         "snapchat": "Snapchat",
         "telegram": "Telegram",
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "upload_photo": "Загрузить фотографию",
         "uploading": "Загружается",
         "username_placeholder": "имя пользователя",
@@ -2157,7 +2334,7 @@
       "done": "Готово",
       "feedback_and_reports": "Отзывы и сообщения об ошибках",
       "feedback_and_support": "Обратная связь и поддержка",
-      "follow_us_on_twitter": "Подпишитесь на нас в Twitter",
+      "follow_us_on_twitter": "Подпишитесь на нас в X",
       "hey_friend_message": "👋️ Привет, друг! Тебе следует скачать Rainbow, это мой любимый кошелек Ethereum 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "Настройки",
       "language": "Язык",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "Доступный баланс: %{balance}",
-        "title": "Предпокупка большего количества токенов"
+        "title": "Предпокупка токенов"
       },
       "review": {
         "token_allocation": "Распределение токенов",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/Twitter",
+          "name": "X (Twitter)",
           "placeholder": "Имя пользователя"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "Готово",
     "copy": "Копировать",
     "paste": "Вставить",
+    "new": "Новый",
     "market_data": {
       "vol": "ОБЪЕМ",
       "price": "ЦЕНА",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "Гонка в прямом эфире",
             "subtitle_parts": [
-              "Токен с наибольшим",
+              "Текущий король - это токен, созданный за последние 30 дней с наибольшим количеством",
               " объёмом покупок ",
-              "сейчас является текущим королем."
+              "сегодня."
             ]
           },
           "step_2": {
