--- a/src/languages/zh_CN.json
+++ b/src/languages/zh_CN.json
@@ -13,7 +13,7 @@
       "show": "显示",
       "show_all": "全部显示",
       "show_less": "显示更少",
-      "tab_balances": "余额",
+      "tab_tokens": "代币",
       "tab_balances_empty_state": "余额",
       "tab_balances_tooltip": "以太坊和代币余额",
       "tab_claimables": "可领取",
@@ -23,6 +23,7 @@
       "tab_investments": "池",
       "tab_savings": "储蓄",
       "tab_showcase": "展示",
+      "tab_perps": "Perps",
       "tab_points": "积分",
       "tab_positions": "持仓",
       "tab_rewards": "奖励",
@@ -707,15 +708,18 @@
           "website": "网站",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter",
-          "warpcast": "Warpcast",
+          "twitter": "X（推特）",
           "farcaster": "Farcaster",
           "other": "其他",
-          "search_on_twitter": "在 Twitter 上搜索"
+          "search_on_twitter": "在X上搜索"
         },
         "uniswap_liquidity": "Uniswap 流动性",
         "value": "价值",
         "volume_24_hours": "24小时交易量",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "数值低于",
+          "due_to_low_liquidity": "由于流动性低"
+        },
         "menu": {
           "view_on": "在 %{blockExplorerName}查看",
           "share": "分享",
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "从展示架中移除",
         "refreshing": "正在刷新元数据...",
         "reported": "报告为垃圾邮件",
-        "twitter": "Twitter",
+        "twitter": "X（推特）",
         "view_all_with_property": "查看所有带有属性的",
         "view_collection": "查看集合",
         "view_on_marketplace": "在市场上查看...",
@@ -958,7 +962,7 @@
       "poolboy_title": "你已解锁\nRainbow Poolboy!",
       "adworld_description": "作为Rainbow世界公民，您现在可以解锁特别版\nAdWorld x Rainbow应用图标。",
       "adworld_title": "欢迎来到Rainbow世界！",
-      "farcaster_description": "我们最无聊的应用图标，灵感来自Warpcast的极简风。",
+      "farcaster_description": "我们最无聊的应用图标，灵感来自Farcaster的极简风。",
       "farcaster_title": "你已解锁\nRainbowcast",
       "redacted_description": "一个专属的 Rainbow 图标，供真正的 Gdupi 爱好者使用。",
       "redacted_title": "您已解锁\n Redacted Rainbow",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "地址已复制到剪贴板"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "N/A",
+        "current_price": "当前价格",
+        "title": "Perps",
+        "error_submitting_order": "提交订单出错",
+        "submitting": "提交中...",
+        "more": "更多",
+        "error": "错误",
+        "cancel": "取消",
+        "liq_price": "清算价",
+        "liq": "清算"
+      },
+      "feature_card": {
+        "title": "Perps",
+        "subtitle": "高风险，高回报交易"
+      },
+      "actions": {
+        "fund_wallet": "为我的钱包充值",
+        "new_position": "新建位置",
+        "close_position": "关闭位置",
+        "open_position": "打开位置"
+      },
+      "account": {
+        "available_balance": "可用余额"
+      },
+      "markets": {
+        "title": "市场",
+        "up_to": "最多",
+        "already_open": "已打开"
+      },
+      "deposit": {
+        "title": "存款",
+        "no_balance": "无余额",
+        "receive": "接收",
+        "slider_label": "正在存款",
+        "zero_amount_error": "输入存款金额",
+        "confirm_button_text": "按住进行存款",
+        "confirm_button_loading_text": "正在存款...",
+        "confirm_button_zero_text": "输入金额",
+        "confirm_button_over_balance_text": "资金不足",
+        "confirm_button_error_text": "报价错误",
+        "quote_error": "􀇿 没有报价可用",
+        "insufficient_balance": "􀫲 资金不足"
+      },
+      "withdraw": {
+        "title": "提款",
+        "slider_label": "正在提现",
+        "confirm_button_text": "按住以取款",
+        "confirm_button_loading_text": "正在提现...",
+        "available_balance_suffix": " 可用",
+        "confirm_button_zero_text": "输入金额",
+        "confirm_button_over_balance_text": "资金不足",
+        "info_card_title_prefix": "正在提现至 ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "更多网络即将支持。目前提现包含1.00美元Hyperliquid费用。"
+      },
+      "position_side": {
+        "long": "做多",
+        "short": "做空"
+      },
+      "positions": {
+        "entry": "入口",
+        "mark_price": "标价",
+        "open_positions": "持仓",
+        "no_open_positions": "没有未平仓位",
+        "position_value": "仓位价值",
+        "mark_price_full": "标记价格",
+        "entry_price": "入场价",
+        "funding": "资金",
+        "liquidation_price": "清算价格",
+        "total": "总计",
+        "learn_more_about_perps": "了解更多关于Perps的信息"
+      },
+      "new_position": {
+        "hold_to_long": "长按以做多",
+        "hold_to_short": "长按以做空",
+        "liquidated_at": "在以下位置清算",
+        "from_current_price": "从当前价格",
+        "details": "详细信息",
+        "funding_rate": "资金费率",
+        "max_slippage": "最大滑点",
+        "no_liquidation_risk": "无清算风险",
+        "trading_without_leverage": "无杠杆交易"
+      },
+      "inputs": {
+        "amount": "金额",
+        "available": "可用",
+        "max": "最大",
+        "maximum_amount_is": "最大额度是",
+        "minimum": "最低",
+        "minimum_amount_is": "最低金额是",
+        "no_balance": "无余额"
+      },
+      "history": {
+        "title": "历史记录",
+        "no_trades": "没有交易",
+        "trade_execution": {
+          "take_profit_executed": "止盈已执行",
+          "stop_loss_executed": "止损已执行",
+          "long_opened": "做多已开仓",
+          "short_opened": "做空已开仓",
+          "long_closed": "做多已平仓",
+          "short_closed": "做空已平仓",
+          "long_liquidated": "做多已清算",
+          "short_liquidated": "做空已清算"
+        }
+      },
+      "trigger_orders": {
+        "title": "触发订单",
+        "take_profit": "止盈",
+        "stop_loss": "止损",
+        "sell": "卖出",
+        "cancel_failed": "无法取消订单",
+        "add_stop_loss": "添加止损",
+        "add_take_profit": "添加止盈",
+        "price": "价格",
+        "projected_profit": "预计收益",
+        "projected_loss": "预计损失",
+        "add": "添加",
+        "adding": "正在添加...",
+        "above": "以上",
+        "below": "以下",
+        "must_be": "必须是",
+        "failed_to_create": "创建触发订单失败"
+      },
+      "search": {
+        "search_markets": "搜索市场",
+        "markets_count": "%{count}个市场",
+        "choose_a_market": "选择一个市场"
+      },
+      "close_position": {
+        "estimated_loss": "预估损失",
+        "estimated_profit": "预估收益",
+        "minimum_amount_is": "最低金额是",
+        "closing": "正在关闭...",
+        "hold_to_close": "长按以关闭"
+      },
+      "explain_sheet": {
+        "next": "下一步",
+        "got_it": "我知道了",
+        "title": "Perps",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "永久期货"
+            ],
+            "subtitle_parts": [
+              "押注价格变动。随时打开和关闭仓位，无过期日。\n由Hyperliquid提供支持。"
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "走",
+              "做多",
+              "或",
+              "做空"
+            ],
+            "subtitle_parts": [
+              "当您认为价格会上涨时做多。当价格会下跌时做空。当您方向正确时获得收益。"
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "杠杆交易"
+            ],
+            "subtitle_parts": [
+              "杠杆会放大您的风险。当您正确时，收益更大。当您错误时，损失和清算更快。"
+            ]
+          }
+        }
+      },
+      "leverage": "杠杆",
+      "up_to": "最多"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "即将推出",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "已领取收入",
         "current_value": "当前价值",
         "rainbow_users_have_earned": "彩虹钱包用户已经赚取",
-        "earn_eth_rewards": "赚取ETH奖励",
-        "rewards_explainer": "每周，排名前列的积分赚取者将获得彩虹钱包链上收入的一部分。通过在彩虹钱包中换币或交易、使用dapp或推荐朋友来收集积分。",
         "my_points": "我的积分",
         "refer_friends": "推荐朋友",
         "try_again": "再试一次",
@@ -1801,7 +1978,7 @@
         "skip": "跳过",
         "snapchat": "Snapchat",
         "telegram": "Telegram",
-        "twitter": "Twitter",
+        "twitter": "X（推特）",
         "upload_photo": "上传照片",
         "uploading": "上传中",
         "username_placeholder": "用户名",
@@ -2157,7 +2334,7 @@
       "done": "完成",
       "feedback_and_reports": "反馈和错误报告",
       "feedback_and_support": "反馈与支持",
-      "follow_us_on_twitter": "在Twitter上关注我们",
+      "follow_us_on_twitter": "在X上关注我们",
       "hey_friend_message": "👋️ 嘿，朋友！你应该下载Rainbow，这是我最喜欢的以太坊钱包 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "设置",
       "language": "语言",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "可用余额: %{balance}",
-        "title": "预购更多代币"
+        "title": "预购代币"
       },
       "review": {
         "token_allocation": "代币分配",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/Twitter",
+          "name": "X（推特）",
           "placeholder": "用户名"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "完成",
     "copy": "复制",
     "paste": "粘贴",
+    "new": "新的",
     "market_data": {
       "vol": "交易量",
       "price": "价格",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "比赛进行中",
             "subtitle_parts": [
-              "当前交易量最大的代币",
+              "现任之王是最近 30 天内创建并具有最多数量的代币",
               "买入量",
-              "现在是当前的王者。"
+              "今天。"
             ]
           },
           "step_2": {
