--- a/src/languages/es_419.json
+++ b/src/languages/es_419.json
@@ -13,7 +13,7 @@
       "show": "Mostrar",
       "show_all": "Mostrar todo",
       "show_less": "Mostrar menos",
-      "tab_balances": "Saldos",
+      "tab_tokens": "Tokens",
       "tab_balances_empty_state": "Saldo",
       "tab_balances_tooltip": "Saldos de Ethereum y Tokens",
       "tab_claimables": "Reclamables",
@@ -23,6 +23,7 @@
       "tab_investments": "Pools",
       "tab_savings": "Ahorros",
       "tab_showcase": "Escaparate",
+      "tab_perps": "Perpetuos",
       "tab_points": "Puntos",
       "tab_positions": "Posiciones",
       "tab_rewards": "Recompensas",
@@ -707,15 +708,18 @@
           "website": "Sitio web",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter",
-          "warpcast": "Warpcast",
+          "twitter": "X (Twitter)",
           "farcaster": "Farcaster",
           "other": "Otro",
-          "search_on_twitter": "Buscar en Twitter"
+          "search_on_twitter": "Buscar en X"
         },
         "uniswap_liquidity": "Liquidez de Uniswap",
         "value": "Valor",
         "volume_24_hours": "Volumen en 24 horas",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "El valor es menor que",
+          "due_to_low_liquidity": "debido a baja liquidez"
+        },
         "menu": {
           "view_on": "Ver en %{blockExplorerName}",
           "share": "Compartir",
@@ -774,10 +778,10 @@
       "chart": {
         "candlestick": {
           "candle_field_labels": {
-            "c": "Cerrar",
+            "c": "CERRAR",
             "h": "A",
             "l": "B",
-            "o": "Abrir",
+            "o": "ABRIR",
             "t": "",
             "v": "V"
           },
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "Eliminado del escaparate",
         "refreshing": "Actualizando metadatos...",
         "reported": "Reportado como spam",
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "view_all_with_property": "Ver todo con propiedad",
         "view_collection": "Ver colección",
         "view_on_marketplace": "Ver en el Marketplace...",
@@ -958,7 +962,7 @@
       "poolboy_title": "¡Has desbloqueado el\nRainbow Poolboy!",
       "adworld_description": "Como Ciudadano del Mundo Rainbow, ahora puedes desbloquear un ícono especial de la aplicación AdWorld x Rainbow.",
       "adworld_title": "¡Bienvenido al Mundo Rainbow!",
-      "farcaster_description": "Nuestro ícono de aplicación más aburrido de todos los tiempos, inspirado en el minimalismo insípido de Warpcast.",
+      "farcaster_description": "Nuestro ícono de aplicación más aburrido de todos los tiempos, inspirado en el minimalismo insípido de Farcaster.",
       "farcaster_title": "Has desbloqueado\nRainbowcast",
       "redacted_description": "Un ícono exclusivo de Rainbow para los verdaderos fanáticos de Gdupi.",
       "redacted_title": "Has desbloqueado\n Redacted Rainbow",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "Dirección copiada al portapapeles"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "N/D",
+        "current_price": "Precio Actual",
+        "title": "Perpetuos",
+        "error_submitting_order": "Error al enviar orden",
+        "submitting": "Enviando...",
+        "more": "Más",
+        "error": "Error",
+        "cancel": "Cancelar",
+        "liq_price": "precio de liquidación",
+        "liq": "liq"
+      },
+      "feature_card": {
+        "title": "Perpetuos",
+        "subtitle": "Comercio de alto riesgo y alta recompensa"
+      },
+      "actions": {
+        "fund_wallet": "Fondos para Mi Cartera",
+        "new_position": "Nueva Posición",
+        "close_position": "Cerrar Posición",
+        "open_position": "Abrir Posición"
+      },
+      "account": {
+        "available_balance": "Saldo Disponible"
+      },
+      "markets": {
+        "title": "Mercados",
+        "up_to": "HASTA",
+        "already_open": "Ya Abierto"
+      },
+      "deposit": {
+        "title": "Depósito",
+        "no_balance": "Sin Balance",
+        "receive": "Recibir",
+        "slider_label": "Depositando",
+        "zero_amount_error": "Ingrese un monto para depositar",
+        "confirm_button_text": "Mantener para Depositar",
+        "confirm_button_loading_text": "Depositando...",
+        "confirm_button_zero_text": "Ingresa una cantidad",
+        "confirm_button_over_balance_text": "Fondos Insuficientes",
+        "confirm_button_error_text": "Error en la cotización",
+        "quote_error": "􀇿 Cotización no disponible",
+        "insufficient_balance": "􀫲 Fondos Insuficientes"
+      },
+      "withdraw": {
+        "title": "Retirar",
+        "slider_label": "Retirando",
+        "confirm_button_text": "Mantener para Retirar",
+        "confirm_button_loading_text": "Retirando...",
+        "available_balance_suffix": " Disponible",
+        "confirm_button_zero_text": "Ingresa una cantidad",
+        "confirm_button_over_balance_text": "Fondos Insuficientes",
+        "info_card_title_prefix": "Retirando a ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "Próximamente nuevas redes. Actualmente, los retiros incluyen una tarifa de $1.00 por Hyperliquid."
+      },
+      "position_side": {
+        "long": "Largo",
+        "short": "Corto"
+      },
+      "positions": {
+        "entry": "ENTRADA",
+        "mark_price": "PRECIO DE REFERENCIA",
+        "open_positions": "Posiciones Abiertas",
+        "no_open_positions": "No hay Posiciones Abiertas",
+        "position_value": "Valor de la Posición",
+        "mark_price_full": "Precio de Referencia",
+        "entry_price": "Precio de Entrada",
+        "funding": "Financiamiento",
+        "liquidation_price": "Precio de Liquidación",
+        "total": "Total",
+        "learn_more_about_perps": "Aprende más sobre Perps"
+      },
+      "new_position": {
+        "hold_to_long": "Mantener para Largo",
+        "hold_to_short": "Mantener para Corto",
+        "liquidated_at": "Liquidado en",
+        "from_current_price": "desde el precio actual",
+        "details": "Detalles",
+        "funding_rate": "Tasa de Financiamiento",
+        "max_slippage": "Deslizamiento máximo",
+        "no_liquidation_risk": "Sin Riesgo de Liquidación",
+        "trading_without_leverage": "Comercio sin apalancamiento"
+      },
+      "inputs": {
+        "amount": "Cantidad",
+        "available": "Disponible",
+        "max": "Máx.",
+        "maximum_amount_is": "La cantidad máxima es",
+        "minimum": "Mínimo",
+        "minimum_amount_is": "La cantidad mínima es",
+        "no_balance": "Sin Balance"
+      },
+      "history": {
+        "title": "Historial",
+        "no_trades": "Sin operaciones",
+        "trade_execution": {
+          "take_profit_executed": "Toma de Ganancias Ejecutada",
+          "stop_loss_executed": "Stop Loss Ejecutado",
+          "long_opened": "Largo Abierto",
+          "short_opened": "Corto Abierto",
+          "long_closed": "Largo Cerrado",
+          "short_closed": "Corto Cerrado",
+          "long_liquidated": "Largo Liquidado",
+          "short_liquidated": "Corto Liquidado"
+        }
+      },
+      "trigger_orders": {
+        "title": "Órdenes de Activación",
+        "take_profit": "Toma de Ganancias",
+        "stop_loss": "Stop Loss",
+        "sell": "Vender",
+        "cancel_failed": "No se pudo cancelar la orden",
+        "add_stop_loss": "Agregar Stop Loss",
+        "add_take_profit": "Agregar Toma de Ganancias",
+        "price": "Precio",
+        "projected_profit": "Ganancia Proyectada",
+        "projected_loss": "Pérdida Proyectada",
+        "add": "Agregar",
+        "adding": "Agregando...",
+        "above": "arriba",
+        "below": "abajo",
+        "must_be": "Debe ser",
+        "failed_to_create": "No se pudo crear la orden de activación"
+      },
+      "search": {
+        "search_markets": "Buscar mercados",
+        "markets_count": "%{count} MERCADOS",
+        "choose_a_market": "ELIJA UN MERCADO"
+      },
+      "close_position": {
+        "estimated_loss": "Pérdida Estimada",
+        "estimated_profit": "Ganancia Estimada",
+        "minimum_amount_is": "La cantidad mínima es",
+        "closing": "Cerrando...",
+        "hold_to_close": "Mantener para Cerrar"
+      },
+      "explain_sheet": {
+        "next": "Siguiente",
+        "got_it": "Entendido",
+        "title": "Perpetuos",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "Futuros Perpetuos"
+            ],
+            "subtitle_parts": [
+              "Apuesta por los movimientos de precios. Abre y cierra posiciones cuando quieras, sin vencimiento. Alimentado por Hyperliquid."
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "Ir",
+              "Largo",
+              "o",
+              "Corto"
+            ],
+            "subtitle_parts": [
+              "Largo cuando crees que el precio subirá. Corto cuando piensas que bajará. Benefíciate cuando aciertes la dirección."
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "Comercializa con Apalancamiento"
+            ],
+            "subtitle_parts": [
+              "El apalancamiento amplifica su riesgo. Mayores ganancias cuando aciertas. Pérdidas más rápidas y liquidación cuando te equivocas."
+            ]
+          }
+        }
+      },
+      "leverage": "Apalancamiento",
+      "up_to": "Hasta"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "Próximamente",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "Ganancias Reclamadas",
         "current_value": "Valor Actual",
         "rainbow_users_have_earned": "Los usuarios de Rainbow han ganado",
-        "earn_eth_rewards": "Gana Recompensas en ETH",
-        "rewards_explainer": "Cada semana, los principales ganadores de puntos semanales recibirán una porción de los ingresos en cadena de Rainbow. Recoge puntos intercambiando o transaccionando en Rainbow, usando dapps o refiriendo a amigos.",
         "my_points": "Mis Puntos",
         "refer_friends": "Referir Amigos",
         "try_again": "Intenta de Nuevo",
@@ -1801,7 +1978,7 @@
         "skip": "Omitir",
         "snapchat": "Snapchat",
         "telegram": "Telegram",
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "upload_photo": "Subir una foto",
         "uploading": "Cargando",
         "username_placeholder": "nombre de usuario",
@@ -2157,7 +2334,7 @@
       "done": "Listo",
       "feedback_and_reports": "Comentarios y reportes de errores",
       "feedback_and_support": "Comentarios y soporte",
-      "follow_us_on_twitter": "Síguenos en Twitter",
+      "follow_us_on_twitter": "Síguenos en X",
       "hey_friend_message": "👋️ ¡Hola amigo! Deberías descargar Rainbow, es mi billetera de Ethereum favorita 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "Configuraciones",
       "language": "Idioma",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/Twitter",
+          "name": "X (Twitter)",
           "placeholder": "Nombre de Usuario"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "Listo",
     "copy": "Copiar",
     "paste": "Pegar",
+    "new": "Nuevo",
     "market_data": {
       "vol": "VOL",
       "price": "PRECIO",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "La carrera está en vivo",
             "subtitle_parts": [
-              "El token con más",
+              "El rey actual es el token creado en los últimos 30 días con el mayor",
               " volumen de compra",
-              "ahora mismo es el rey actual."
+              "hoy."
             ]
           },
           "step_2": {
