--- a/src/languages/th_TH.json
+++ b/src/languages/th_TH.json
@@ -13,7 +13,7 @@
       "show": "แสดง",
       "show_all": "แสดงทั้งหมด",
       "show_less": "แสดงน้อยลง",
-      "tab_balances": "ยอดคงเหลือ",
+      "tab_tokens": "โทเคน",
       "tab_balances_empty_state": "ยอดคงเหลือ",
       "tab_balances_tooltip": "Ethereum และยอดคงเหลือ Token",
       "tab_claimables": "รายการที่ต้องเคลม",
@@ -23,6 +23,7 @@
       "tab_investments": "สระน้ำ",
       "tab_savings": "เงินออม",
       "tab_showcase": "โชว์เคส",
+      "tab_perps": "Perps",
       "tab_points": "แต้ม",
       "tab_positions": "ตำแหน่ง",
       "tab_rewards": "รางวัล",
@@ -707,15 +708,18 @@
           "website": "เว็บไซต์",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter",
-          "warpcast": "Warpcast",
+          "twitter": "X (ทวิตเตอร์)",
           "farcaster": "ฟาร์คาสเตอร์",
           "other": "อื่น ๆ",
-          "search_on_twitter": "ค้นหาบนทวิตเตอร์"
+          "search_on_twitter": "ค้นหาบน X"
         },
         "uniswap_liquidity": "ความสภาพ Uniswap",
         "value": "ค่า",
         "volume_24_hours": "ปริมาณภายใน 24 ชั่วโมง",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "ค่าต่ำกว่า",
+          "due_to_low_liquidity": "เนื่องจากความเหลวที่ต่ำ"
+        },
         "menu": {
           "view_on": "ดูบน %{blockExplorerName}",
           "share": "แบ่งปัน",
@@ -923,7 +927,7 @@
         "toast_removed_from_showcase": "ลบออกจากโชว์เคส",
         "refreshing": "กำลังรีเฟรชข้อมูลเมทาดาทา...",
         "reported": "รายงานเป็นสแปม",
-        "twitter": "Twitter",
+        "twitter": "X (ทวิตเตอร์)",
         "view_all_with_property": "ดูทั้งหมดด้วยคุณสมบัติ",
         "view_collection": "ดูคอลเลกชัน",
         "view_on_marketplace": "ดูบน Marketplace...",
@@ -958,7 +962,7 @@
       "poolboy_title": "คุณได้ปลดล็อก\nRainbow Poolboy!",
       "adworld_description": "ในฐานะพลเมือง Rainbow World คุณสามารถปลดล็อกไอคอนแอป AdWorld x Rainbow ฉบับพิเศษได้แล้ว",
       "adworld_title": "ยินดีต้อนรับสู่ Rainbow World!",
-      "farcaster_description": "ไอคอนแอปที่น่าเบื่อที่สุดของเรา แรงบันดาลใจจากความเรียบง่ายที่ไร้บทบาทของ Warpcast",
+      "farcaster_description": "ไอคอนแอปที่น่าเบื่อที่สุดของเรา แรงบันดาลใจจากความเรียบง่ายที่ไร้บทบาทของ Farcaster",
       "farcaster_title": "คุณได้ปลดล็อก\nRainbowcast",
       "redacted_description": "ไอคอน Rainbow พิเศษสำหรับผู้ที่ชื่นชอบ Gdupi แท้ๆ",
       "redacted_title": "คุณได้ปลดล็อก\nRedacted Rainbow",
@@ -1577,6 +1581,181 @@
         "address_copied_to_clipboard": "ได้คัดลอกที่อยู่ไปยังคลิปบอร์ดแล้ว"
       }
     },
+    "perps": {
+      "common": {
+        "not_available": "ไม่พร้อมใช้งาน",
+        "current_price": "ราคาปัจจุบัน",
+        "title": "Perps",
+        "error_submitting_order": "เกิดข้อผิดพลาดในการส่งคำสั่ง",
+        "submitting": "ส่ง...",
+        "more": "เพิ่มเติม",
+        "error": "ข้อผิดพลาด",
+        "cancel": "ยกเลิก",
+        "liq_price": "ราคา liq.",
+        "liq": "liquid."
+      },
+      "feature_card": {
+        "title": "Perps",
+        "subtitle": "การซื้อขายที่มีความเสี่ยงสูงและผลตอบแทนสูง"
+      },
+      "actions": {
+        "fund_wallet": "เติมเงินในกระเป๋าของฉัน",
+        "new_position": "ตำแหน่งใหม่",
+        "close_position": "ปิดตำแหน่ง",
+        "open_position": "เปิดตำแหน่ง"
+      },
+      "account": {
+        "available_balance": "ยอดคงเหลือที่มี"
+      },
+      "markets": {
+        "title": "ตลาด",
+        "up_to": "สูงสุดถึง",
+        "already_open": "เปิดแล้ว"
+      },
+      "deposit": {
+        "title": "ฝาก",
+        "no_balance": "ไม่มีคงเหลือ",
+        "receive": "รับ",
+        "slider_label": "กำลังฝาก",
+        "zero_amount_error": "กรอกจำนวนเงินที่จะฝาก",
+        "confirm_button_text": "กดและยังฝาก",
+        "confirm_button_loading_text": "กำลังฝาก...",
+        "confirm_button_zero_text": "ป้อนจำนวน",
+        "confirm_button_over_balance_text": "เงินทุนไม่เพียงพอ",
+        "confirm_button_error_text": "ข้อผิดพลาดของราคาที่เสนอ",
+        "quote_error": "􀇿 ไม่มีใบเสนอราคา",
+        "insufficient_balance": "􀫲 เงินทุนไม่เพียงพอ"
+      },
+      "withdraw": {
+        "title": "ถอน",
+        "slider_label": "กำลังถอน",
+        "confirm_button_text": "กดเพื่อถอน",
+        "confirm_button_loading_text": "กำลังถอน...",
+        "available_balance_suffix": " ว่าง",
+        "confirm_button_zero_text": "ป้อนจำนวน",
+        "confirm_button_over_balance_text": "เงินทุนไม่เพียงพอ",
+        "info_card_title_prefix": "กำลังถอนไปที่ ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "เครือข่ายเพิ่มเติมจะมาเร็วๆ นี้ ขณะนี้มีค่าธรรมเนียม Hyperliquid $1.00 สำหรับการถอน"
+      },
+      "position_side": {
+        "long": "ยาว",
+        "short": "สั้น"
+      },
+      "positions": {
+        "entry": "เข้า",
+        "mark_price": "ราคามาร์ก",
+        "open_positions": "ตำแหน่งที่เปิดอยู่",
+        "no_open_positions": "ไม่มีตำแหน่งที่เปิดอยู่",
+        "position_value": "ค่าตำแหน่ง",
+        "mark_price_full": "ราคามาร์ก",
+        "entry_price": "ราคาเข้า",
+        "funding": "การจัดหาเงิน",
+        "liquidation_price": "ราคาการชำระหนี้",
+        "total": "ทั้งหมด",
+        "learn_more_about_perps": "เรียนรู้เกี่ยวกับ Perps เพิ่มเติม"
+      },
+      "new_position": {
+        "hold_to_long": "กดค้างเพื่อยาว",
+        "hold_to_short": "กดค้างเพื่อสั้น",
+        "liquidated_at": "การขายหมดที่",
+        "from_current_price": "จากราคาปัจจุบัน",
+        "details": "รายละเอียด",
+        "funding_rate": "อัตราการจัดหาเงิน",
+        "max_slippage": "สลิปเปจสูงสุด",
+        "no_liquidation_risk": "ไม่มีความเสี่ยงในการชำระหนี้",
+        "trading_without_leverage": "ซื้อขายโดยไม่มีการยืม"
+      },
+      "inputs": {
+        "amount": "จำนวน",
+        "available": "ที่มีอยู่",
+        "max": "สูงสุด",
+        "maximum_amount_is": "จำนวนสูงสุดคือ",
+        "minimum": "ขั้นต่ำ",
+        "minimum_amount_is": "จำนวนขั้นต่ำคือ",
+        "no_balance": "ไม่มีคงเหลือ"
+      },
+      "history": {
+        "title": "ประวัติ",
+        "no_trades": "ไม่มีการซื้อขาย",
+        "trade_execution": {
+          "take_profit_executed": "เรียกผลกำไร",
+          "stop_loss_executed": "เรียกขาดทุน",
+          "long_opened": "เปิดยาว",
+          "short_opened": "เปิดสั้น",
+          "long_closed": "ปิดยาว",
+          "short_closed": "ปิดสั้น",
+          "long_liquidated": "ยาวถูกชำระ",
+          "short_liquidated": "สั้นถูกชำระ"
+        }
+      },
+      "trigger_orders": {
+        "title": "คำสั่งกระตุ้น",
+        "take_profit": "เรียกผลกำไร",
+        "stop_loss": "เรียกขาดทุน",
+        "sell": "ขาย",
+        "cancel_failed": "ยกเลิกคำสั่งไม่สำเร็จ",
+        "add_stop_loss": "เพิ่มเรียกขาดทุน",
+        "add_take_profit": "เพิ่มเรียกผลกำไร",
+        "price": "ราคา",
+        "projected_profit": "ผลกำไรที่คาดการณ์",
+        "projected_loss": "ขาดทุนที่คาดการณ์",
+        "add": "เพิ่ม",
+        "adding": "กำลังเพิ่ม...",
+        "above": "เหนือ",
+        "below": "ต่ำกว่า",
+        "must_be": "ต้องเป็น",
+        "failed_to_create": "สร้างคำสั่งกระตุ้นไม่สำเร็จ"
+      },
+      "search": {
+        "search_markets": "ค้นหาตลาด",
+        "markets_count": "%{count} ตลาด",
+        "choose_a_market": "เลือกตลาด"
+      },
+      "close_position": {
+        "estimated_loss": "ขาดทุนที่คาดการณ์",
+        "estimated_profit": "ผลกำไรที่คาดการณ์",
+        "minimum_amount_is": "จำนวนขั้นต่ำคือ",
+        "closing": "กำลังปิด...",
+        "hold_to_close": "กดค้างเพื่อปิด"
+      },
+      "explain_sheet": {
+        "next": "ถัดไป",
+        "got_it": "รับทราบ",
+        "title": "Perps",
+        "steps": {
+          "step_1": {
+            "title_parts": [
+              "ฟิวเจอร์สถาวร"
+            ],
+            "subtitle_parts": [
+              "เดิมพันกับการเปลี่ยนแปลงราคา เปิดและปิดตำแหน่งเมื่อคุณต้องการ ไม่มีการหมดอายุ\nขับเคลื่อนโดย Hyperliquid."
+            ]
+          },
+          "step_2": {
+            "title_parts": [
+              "ไป",
+              "ยาว",
+              "หรือ",
+              "สั้น"
+            ],
+            "subtitle_parts": [
+              "ยาวเมื่อคุณคิดว่าราคาจะขึ้น สั้นเมื่อคุณคิดว่าจะตก ทำกำไรเมื่อคุณทำทิศทางได้ถูกต้อง"
+            ]
+          },
+          "step_3": {
+            "title_parts": [
+              "ซื้อขายด้วยการยืม"
+            ],
+            "subtitle_parts": [
+              "การยืมขยายความเสี่ยงของคุณ กำไรมากขึ้นเมื่อคุณถูก ขาดทุนเร็วขึ้น และชำระหนี้เมื่อคุณผิด"
+            ]
+          }
+        }
+      },
+      "leverage": "เลเวอเรจ",
+      "up_to": "สูงสุดถึง"
+    },
     "points": {
       "placeholder": {
         "coming_soon_title": "เร็วๆ นี้",
@@ -1653,8 +1832,6 @@
         "claimed_earnings": "รายได้ที่รับแล้ว",
         "current_value": "มูลค่าปัจจุบัน",
         "rainbow_users_have_earned": "ผู้ใช้ Rainbow ได้รับ",
-        "earn_eth_rewards": "รับรางวัล ETH",
-        "rewards_explainer": "ทุกสัปดาห์ ผู้ที่ได้รับคะแนนประจำสัปดาห์สูงสุดจะได้รับส่วนแบ่งจากรายได้ของ Rainbow บนเชน สะสมคะแนนโดยการแลกเปลี่ยนหรือทำธุรกรรมใน Rainbow ใช้ dapps หรือแนะนำเพื่อน",
         "my_points": "คะแนนของฉัน",
         "refer_friends": "แนะนำเพื่อน",
         "try_again": "ลองใหม่",
@@ -1801,7 +1978,7 @@
         "skip": "ข้าม",
         "snapchat": "Snapchat",
         "telegram": "Telegram",
-        "twitter": "ทวิตเตอร์",
+        "twitter": "X (ทวิตเตอร์)",
         "upload_photo": "อัปโหลดรูปภาพ",
         "uploading": "กำลังอัปโหลด",
         "username_placeholder": "ชื่อผู้ใช้",
@@ -2157,7 +2334,7 @@
       "done": "เสร็จสิ้น",
       "feedback_and_reports": "ข้อเสนอแนะและรายงานข้อผิดพลาด",
       "feedback_and_support": "คำติชมและการสนับสนุน",
-      "follow_us_on_twitter": "ติดตามเราบน Twitter",
+      "follow_us_on_twitter": "ติดตามเราบน X",
       "hey_friend_message": "👋️ สวัสดีเพื่อน! คุณควรดาวน์โหลด Rainbow, มันเป็นกระเป๋า Ethereum ที่ชื่นชอบ 🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️🌈️",
       "label": "การตั้งค่า",
       "language": "ภาษา",
@@ -3330,7 +3507,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "ยอดคงเหลือที่มีอยู่: %{balance}",
-        "title": "ซื้อโทเค็นเพิ่มล่วงหน้า"
+        "title": "ซื้อโทเค็นล่วงหน้า"
       },
       "review": {
         "token_allocation": "การจัดสรรโทเค็น",
@@ -3395,7 +3572,7 @@
       },
       "links": {
         "x": {
-          "name": "X/Twitter",
+          "name": "X (ทวิตเตอร์)",
           "placeholder": "ชื่อผู้ใช้"
         },
         "telegram": {
@@ -3468,6 +3645,7 @@
     "done": "เสร็จสิ้น",
     "copy": "คัดลอก",
     "paste": "วาง",
+    "new": "ใหม่",
     "market_data": {
       "vol": "VOL",
       "price": "ราคา",
@@ -3492,9 +3670,9 @@
           "step_1": {
             "title": "การแข่งขันกำลังดำเนินอยู่",
             "subtitle_parts": [
-              "โทเค็นที่มี",
+              "ราชาปัจจุบันคือโทเค็นที่ถูกสร้างขึ้นในช่วง 30 วันที่ผ่านมาและมีจำนวน",
               "ปริมาณการซื้อ",
-              "ขณะนี้เป็นราชาปัจจุบัน"
+              "วันนี้"
             ]
           },
           "step_2": {
